--- a/css/homeInformation.css
+++ b/css/homeInformation.css
@@ -53,7 +53,7 @@ aside.home-left__aside>p
 article.home__article
 {
    width  : 100%;
-   height : 120vh;
+   height : 95vh;
 
    margin  : 1rem 0 1rem 0;
    padding : 0;
@@ -153,8 +153,10 @@ button.call-to-action__button
    margin     : auto;
    margin-top : 2rem;
    display : block;
+   padding : 1.2rem 2.2rem;
    width     : max-content;
-   max-width : 300px;
+   max-width : none;
+   font-size : 2.05rem;
 }
 
 section.call-to-action__section
